test/spec_vectors/f32/fail/module_3.wat
(module (func (result f32) (f32.max (i64.const 0) (f64.const 0))))